exports[`Avatar component renders properly as self avatar 1`] = `
<div
  className="avatar"
  style={undefined}>
  <span
    className="avatar-self" />
</div>
`;

exports[`Avatar component renders properly without image 1`] = `
<div
  className="avatar"
  style={undefined}>
  <span
    className="avatar-letter">
    T
  </span>
</div>
`;
